--- a/front-end/product.html
+++ b/front-end/product.html
@@ -36,6 +36,7 @@
             <h3>Update or Change Product</h3>
             <input type="text" id="uproductName" placeholder="New Product Name">
             <input type="number" id="uproductPrice" placeholder="New Product Price" min="5">
+            <input type="hidden" id="updatedProductId">
             <button type="submit">Update Product</button>
         </form>
 
